Overflow fix
Fix #231

--- a/static/stylesheet/style.less
+++ b/static/stylesheet/style.less
@@ -536,9 +536,9 @@ ul.social {
     width: 25vw;
     height: 100vh;
     position: fixed;
+    z-index: 1000;
     top: 0;
     left: 0;
-    overflow-y: auto;
 
     div {
       padding: 36px 18px;
@@ -559,15 +559,11 @@ ul.social {
   }
 
   main {
-    width: 75vw;
     height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 25vw;
-    overflow-x: hidden;
+    position: relative;
+    padding-left: 25vw;
 
     article {
-
       max-width: 760px;
 
       ul.list {
